; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_retroarch.c_bsv_movie_init_handle.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_retroarch.c_bsv_movie_init_handle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bsv_movie_state_handle = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @bsv_movie_init_handle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bsv_movie_init_handle(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32* @bsv_movie_init_internal(i8* %7, i32 %8)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %15

13:                                               ; preds = %2
  %14 = load i32*, i32** %6, align 8
  store i32* %14, i32** @bsv_movie_state_handle, align 8
  store i32 1, i32* %3, align 4
  br label %15

15:                                               ; preds = %13, %12
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32* @bsv_movie_init_internal(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
